# metaflow-mcp

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/metaflow_mcp/: __about__.py  __init__.py  cli.py  logging.py
tests/: __init__.py
